password is not concealed. Minor fixes to make buttons even on tablets and in-between sizes for the most part

--- a/src/components/LandingContent/LandingContent.module.scss
+++ b/src/components/LandingContent/LandingContent.module.scss
@@ -47,6 +47,7 @@
     .loginContainer {
         display: flex;
         justify-content: flex-end;
+        align-items: center;
         flex-wrap: wrap;
         margin-bottom: 1rem;
     }
