--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -98,7 +98,7 @@ button {
     cursor: pointer;
     border: none;
     border-radius: 6px;
-    margin: 0 1rem;
+    margin: 1rem;
     padding: .75rem 1rem;
     text-transform: capitalize;
     font-size: 1.143rem;
